Fix NTB X coordinate for painting.

Things still look wrong even with this patch, because the Y coordinate is also
wrong; that's a deeper issue tracked in bug 866671.

Bug: 866665
Change-Id: I6a5f8fb159b3a70d71d1d17c904d2bd2d6d4fc6f
Reviewed-on: https://chromium-review.googlesource.com/1147085
Reviewed-by: Allen Bauer <kylixrd@chromium.org>
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577558}
Former-commit-id: c3b0effbe9f638243dae263af97794bf010170c1